--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
-  background-color: black;
+  background-color: lightblue;
   text-align: center;
-  color: white;
+  color: orange;
 }
 
 
 
 #myCanvas {
-  background-image: url("https://images.pexels.com/photos/1387577/pexels-photo-1387577.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background-image: url("");
   background-size: 400px;
   border-radius: 30px;
   border: 1px solid rgb(255,245,227);
